[metadata]
name = bubbletools
version = 0.6.3
description = Tools around the bubble format (see https://github.com/Aluriak/PowerGrASP#bubble-formatted-file)
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/bubble-tools
license = GPL
keywords = graph test-format
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    docopt==0.6.2
    graphviz>=0.4.10
    networkx>=1.11
    pytest>=3.1.2

[options.packages.find]
where = .
