[metadata]
name = bubbletools
version = attr: bubbletools.__version__
description = Tools around the bubble format
long_description = file: README.md
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/bubble-tools
license = GPL
keywords = graph, format
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = bubbletools
install_requires =
    docopt>=0.6.2
    graphviz>=0.10.1
    networkx>=1.11
    pytest>=3.1.2


[zest.releaser]
create-wheel = no
python-file-with-version = bubbletools/__init__.py
